# VietnameseSignLanguageRecognition

./: .gitignore  README.md  README.txt  docker-compose.yml  main.py  merge_splits.py  pyproject.toml  requirements.txt  run_demo.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  demo_gradio.py  docker-compose.yml  pyproject.toml
backend/scripts/: download_weights.sh
backend/serving/: README.md  config.py  dependencies.py  main.py  recognition_bridge.py
backend/serving/models/: schemas.py  session.py
backend/serving/routers/: health.py  recognize.py  recognize_video.py  tts.py  websocket.py
backend/serving/services/: frame_buffer.py  gloss_decoder.py  llm.py  segmenter.py  slgcn.py  spoter.py  tts.py  video_recognizer.py
backend/serving/utils/: logger.py  warmup.py
backend/src/pipelines/: __init__.py  spoter_graph_classification.py
backend/src/utils/: __init__.py  constants.py
docs/: architecture_and_methods_report.md
frontend/: .env.development  .env.production  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/hooks/: useCamera.js
frontend/src/services/: api.js  ws.js
frontend/src/store/: useSignStore.js
frontend/src/utils/: audioHelper.js  keypoints.js
scripts/: check_training.py  download.sh  prepare_dataset.py  train_sl_gcn_ensemble.sh
src/: convert_ensemble_to_onnx.py  convert_model_to_onnx.py  convert_model_to_torchscript.py  ensemble_evaluate.py  kaggle_dataset.py  test_holistic.py  test_recognition.py  test_video.py  train.py
src/configs/: arguments.py
src/configs/evaluation/: spoter.yaml  videomae_s.yaml
src/configs/inference/: spoter.yaml
src/configs/training/: dsta_slr_multicam.yaml  sl_gcn_bone_motion_multicam.yaml  sl_gcn_bone_multicam.yaml  sl_gcn_joint_motion_multicam.yaml  sl_gcn_joint_multicam.yaml  sl_gcn_multicam.yaml  spoter.yaml  spoter_multicam.yaml  videomae_s.yaml
src/features/: utils.py  visl_400_dataset.py  visl_98_dataset.py
src/features/augmentations/: sl_gcn.py
src/features/hf_builders/: visl_400.py
src/features/transforms/: sl_gcn.py
src/models/dsta_slr/: __init__.py  configuration.py  modelling.py
src/models/mvit/: __init__.py  configuration.py  modelling.py
src/models/s3d/: __init__.py  configuration.py  modelling.py
src/models/sl_gcn/: __init__.py  configuration.py  modelling.py
src/models/spoter/: modelling.py
src/models/swin3d/: __init__.py  modelling.py
src/models/video_resnet/: __init__.py  configuration.py  (+1 more)
src/pipelines/: spoter_graph_classification.py
src/tools/: features.py  models.py
src/utils/: metrics.py
src/visualization/: __init__.py  drawing.py
(+9 files in other folders)
