[project]
name = "vietnamesesignlanguagerecognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "accelerate==1.13.0",
    "decord==0.6.0",
    "einops==0.8.2",
    "evaluate==0.4.6",
    "hf-transfer==0.1.9",
    "imageio==2.37.3",
    "kagglehub>=1.0.2",
    "mediapipe==0.10.21",
    "onnx==1.21.0",
    "onnxruntime==1.26.0",
    "onnxscript==0.7.1",
    "opencv-python==4.10.0.84",
    "pandas==2.2.2",
    "pose-format==0.13.0",
    "pytorchvideo==0.1.5",
    "scikit-learn==1.5.0",
    "simple-parsing==0.1.8",
    "thop==0.1.1.post2209072238",
    "timm==1.0.27",
    "torch==2.12.0",
    "torchsummary==1.5.1",
    "torchvision==0.27.0",
    "transformers==4.41.2",
    "wandb==0.17.4",
]

# PyTorch build cho CUDA 12.6 — tương thích driver NVIDIA 535 (CUDA 12.2).
# Tránh bản cu130 mặc định trên PyPI vì nó đòi driver mới hơn -> fallback CPU.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

